# claude-office

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  starter.vbs
backend/: pyproject.toml
backend/app/: config.py
backend/app/api/: websocket.py
backend/app/core/: event_processor.py  state_machine.py  summary_service.py
backend/app/core/handlers/: agent_handler.py
frontend/: package.json
frontend/src/app/: page.tsx
hooks/: pyproject.toml
hooks/src/claude_office_hooks/: main.py
opencode-plugin/: package.json
