[project]
name = "claude-office"
version = "0.16.0"
description = "Real-time pixel art office simulation visualizing Claude Code operations"
readme = "README.md"
authors = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
maintainers = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: JavaScript",
    "Framework :: FastAPI",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
keywords = [
    "claude",
    "claude-code",
    "anthropic",
    "visualization",
    "pixel-art",
    "office",
    "simulation",
    "llm",
    "ai",
    "agent",
    "subagent",
    "fastapi",
    "nextjs",
    "pixijs",
    "websocket",
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.33.1",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/paulrobello/claude-office"
Documentation = "https://github.com/paulrobello/claude-office/blob/main/README.md"
Source = "https://github.com/paulrobello/claude-office"
Issues = "https://github.com/paulrobello/claude-office/issues"
Discussions = "https://github.com/paulrobello/claude-office/discussions"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "scripts",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
    "B",
    "C4",
    "SIM",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
