[project]
name = "claude-office-visualizer"
version = "0.16.0"
description = "Real-time pixel art visualization of Claude Code operations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
    "sqlalchemy>=2.0.49",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.27",
    "httpx>=0.28.1",
    "aiosqlite>=0.22.1",
    "rich>=15.0.0",
    "greenlet>=3.5.0",
    "anthropic>=0.97.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "pyright>=1.1.408",
    "pre-commit>=4.5.1",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
    "B",
    "C4",
    "SIM",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = [
    "app",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
timeout = 5

[tool.hatch.build.targets.wheel]
packages = [
    "app",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.12",
    "pre-commit>=4.6.0",
]
